[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/screens/TitleScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Root.gd" type="Script" id=2]
[ext_resource path="res://scripts/AsyncLoader.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/screens/PauseScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Game.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/screens/LoadingScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/screens/SplashScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/screens/LoseScreen.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/screens/WinScreen.tscn" type="PackedScene" id=9]

[node name="Root" type="Node" groups=["root"]]
pause_mode = 2
script = ExtResource( 2 )

[node name="Game" parent="." instance=ExtResource( 5 )]

[node name="AsyncLoader" parent="." instance=ExtResource( 3 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="SplashScreen" parent="CanvasLayer" instance=ExtResource( 7 )]
visible = false

[node name="TitleScreen" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="PauseScreen" parent="CanvasLayer" instance=ExtResource( 4 )]
visible = false

[node name="LoadingScreen" parent="CanvasLayer" instance=ExtResource( 6 )]
visible = false

[node name="WinScreen" parent="CanvasLayer" instance=ExtResource( 9 )]
visible = false

[node name="LoseScreen" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false
